@@ -564,6 +564,7 @@ Paul Moore
 Derek Morr
 James A Morrison
 Mher Movsisyan
+Ruslan Mstoi
 Sjoerd Mullender
 Sape Mullender
 Michael Muller
